Fix rows on safari

--- a/plugin/YouPHPFlix2/view/css/style.css
+++ b/plugin/YouPHPFlix2/view/css/style.css
@@ -396,3 +396,7 @@ body.fullscreen{
     background: transparent;
     border-color: transparent;
 }
+
+.categoriesContainerItem{
+    display: inline-block;
+}
